refactor(server): resolved some important SonarQube warnings
Changelog: refactor