@@ -5,15 +5,16 @@ import com.unimib.singletonsquad.doit.dto.received.RequestMatchDTO;
 
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class ParallelSort {
+
+    private ParallelSort(){}
 
     public static List<VolunteerRequest> sortRequestByVote(List<RequestMatchDTO> persons) {
         return persons.parallelStream()
                 .sorted(Comparator.comparingInt(RequestMatchDTO::getPoints).reversed())
                 .map(RequestMatchDTO::getVolunteerRequest)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
